Opened 14 years ago
Closed 13 years ago
#6885 closed bug (fixed)
BTextView should not accept disallowed chars being pasted
Reported by: | phoudoin | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/Development |
Keywords: | BTextView disallowed chars | Cc: | |
Blocked By: | Blocking: | #6853 | |
Platform: | All |
Description
All characters pasted are accepted, whatever disallowed chars was set previously. See #6853
Attachments (1)
Change History (8)
by , 13 years ago
Attachment: | textview_paste_26102011.patch added |
---|
comment:1 by , 13 years ago
patch: | 0 → 1 |
---|
comment:2 by , 13 years ago
comment:3 by , 13 years ago
hamish, thanks for the patch.
DeadYak and I were wondering the meaning of the choice of the variable "s". Could you please elaborate? This would allow to fix and apply the patch.
comment:4 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Applied in hrev44326 with variable renaming by myself. Thanks!
comment:5 by , 13 years ago
Related to this patch ? hrev 44326
C++ /boot/home/haiku/generated.x86gcc4/objects/haiku/x86/release/kits/interface/TextView.o /boot/home/haiku/src/kits/interface/TextView.cpp: In member function 'virtual void BTextView::Paste(BClipboard*)': /boot/home/haiku/src/kits/interface/TextView.cpp:1447:56: error: '_FilterDisallowedChars' was not declared in this scope /boot/home/haiku/src/kits/interface/TextView.cpp: In member function 'bool BTextView::_MessageDropped(BMessage*, BPoint, BPoint)': /boot/home/haiku/src/kits/interface/TextView.cpp:4797:59: error: '_FilterDisallowedChars' was not declared in this scope /boot/home/haiku/src/kits/interface/TextView.cpp: At global scope: /boot/home/haiku/src/kits/interface/TextView.cpp:5604:26: error: no 'void BTextView::_FilterDisallowedChars(char*, int32&, text_run_array*)' member function declared in class 'BTextView' /boot/develop/abi/x86/gcc4/tools/current/bin/gcc -c "/boot/home/haiku/src/kits/interface/TextView.cpp" -O2 -Wall -Wno-trigraphs -Wno-ctor-dtor-privacy -Woverloaded-virtual -Wpointer-arith -Wcast-align -Wsign-compare -Wno-multichar -fno-strict-aliasing -fno-tree-vrp -nostdinc -Wno-deprecated -march=pentium -D_ZETA_USING_DEPRECATED_API_=1 -D_ZETA_TS_FIND_DIR_=1 -Werror -Wno-error=uninitialized -Wno-unused-but-set-variable -D__HAIKU__ -DHAIKU_DISTRO_COMPATIBILITY_DEFAULT -D__INTEL__ -DARCH_x86 -DBOOT_ARCHIVE_IMAGE_OFFSET=300 -DB_USE_BUILTIN_ATOMIC_FUNCTIONS -DHAIKU_INCLUDE_PATENTED_CODE=0 -DHAIKU_TARGET_PLATFORM_HAIKU -iquote /boot/home/haiku/build/user_config_headers -iquote /boot/home/haiku/build/config_headers -iquote /boot/home/haiku/src/kits/interface -iquote /boot/home/haiku/generated.x86gcc4/objects/common/kits/interface -iquote /boot/home/haiku/generated.x86gcc4/objects/haiku_host/x86/common/kits/interface -iquote /boot/home/haiku/generated.x86gcc4/objects/haiku/x86/common/kits/interface -iquote /boot/home/haiku/src/kits/interface/textview_support -iquote /boot/home/haiku/src/kits/interface/layouter -iquote /boot/home/haiku/src/kits/tracker -I /boot/home/haiku/headers/libs/agg -I /boot/home/haiku/headers/private/app -I /boot/home/haiku/headers/private/input -I /boot/home/haiku/headers/private/print -I /boot/home/haiku/headers/private/interface -I /boot/home/haiku/headers/private/locale -I /boot/home/haiku/headers/private/shared -I /boot/home/haiku/headers/private/support -I /boot/home/haiku/headers/private/tracker -I /boot/develop/abi/x86/gcc4/tools/gcc-4.6.2-haiku-120121/lib/gcc/i586-pc-haiku/4.6.2/../../../../include/c++/4.6.2 -I /boot/develop/abi/x86/gcc4/tools/gcc-4.6.2-haiku-120121/lib/gcc/i586-pc-haiku/4.6.2/../../../../include/c++/4.6.2/i586-pc-haiku -I /boot/develop/abi/x86/gcc4/tools/gcc-4.6.2-haiku-120121/lib/gcc/i586-pc-haiku/4.6.2/../../../../include/c++/4.6.2/backward -I /boot/develop/abi/x86/gcc4/tools/gcc-4.6.2-haiku-120121/lib/gcc/i586-pc-haiku/4.6.2/../../../../include/c++/4.6.2/ext -I /boot/develop/abi/x86/gcc4/tools/gcc-4.6.2-haiku-120121/lib/gcc/i586-pc-haiku/4.6.2/include -I /boot/develop/abi/x86/gcc4/tools/gcc-4.6.2-haiku-120121/lib/gcc/i586-pc-haiku/4.6.2/include-fixed -I /boot/home/haiku/headers -I /boot/home/haiku/headers/posix -I /boot/home/haiku/headers/glibc -I /boot/home/haiku/headers/os -I /boot/home/haiku/headers/os/add-ons -I /boot/home/haiku/headers/os/add-ons/file_system -I /boot/home/haiku/headers/os/add-ons/graphics -I /boot/home/haiku/headers/os/add-ons/input_server -I /boot/home/haiku/headers/os/add-ons/registrar -I /boot/home/haiku/headers/os/add-ons/screen_saver -I /boot/home/haiku/headers/os/add-ons/tracker -I /boot/home/haiku/headers/os/app -I /boot/home/haiku/headers/os/device -I /boot/home/haiku/headers/os/drivers -I /boot/home/haiku/headers/os/game -I /boot/home/haiku/headers/os/interface -I /boot/home/haiku/headers/os/kernel -I /boot/home/haiku/headers/os/locale -I /boot/home/haiku/headers/os/media -I /boot/home/haiku/headers/os/mail -I /boot/home/haiku/headers/os/midi -I /boot/home/haiku/headers/os/midi2 -I /boot/home/haiku/headers/os/net -I /boot/home/haiku/headers/os/opengl -I /boot/home/haiku/headers/os/storage -I /boot/home/haiku/headers/os/support -I /boot/home/haiku/headers/os/translation -I /boot/home/haiku/headers/private/. -o "/boot/home/haiku/generated.x86gcc4/objects/haiku/x86/release/kits/interface/TextView.o" ; ...failed C++ /boot/home/haiku/generated.x86gcc4/objects/haiku/x86/release/kits/interface/TextView.o ...
comment:6 by , 13 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Note:
See TracTickets
for help on using tickets.
This filters out any disallowed characters from text being pasted or dropped in. If the resulting filtered text is zero characters long, it beeps. Works with styled text too.